# noesis-mvvm-codegen

./: CMakeLists.txt  LICENSE  README.md  TODO.md
codegen/: codegen.py  requirements.txt
codegen/templates/: utils.jinja
codegen/templates/model/: utils.jinja
codegen/templates/model/header/: aliases.jinja  forwards.jinja  getter.jinja  includes.jinja  members.jinja  properties.jinja  setter.jinja  skeleton.jinja
codegen/templates/model/source/: getter.jinja  includes.jinja  properties.jinja  reflection.jinja  setter.jinja  skeleton.jinja
codegen/templates/viewmodel/: inc.jinja  utils.jinja
codegen/templates/viewmodel/header/: forwards.jinja  getter.jinja  includes.jinja  properties.jinja  setter.jinja  skeleton.jinja
codegen/templates/viewmodel/source/: getter.jinja  handler.jinja  includes.jinja  observation.jinja  reflection.jinja  setter.jinja  skeleton.jinja
include/mvvm/: BaseModelCollection.h  BaseModelPtrCollection.h  BaseProperty.h  Cache.h  Key.h  Model.h  ModelCollection.h  Property.h  PropertyList.h  SharedPtr.h  SubscriberId.h  Subscription.h  Traits.h  ValueType.h  ValueTypeOf.h  ViewModel.h  ViewModelCollection.h  ViewModelFactory.h
noesis/include/NsCore/: BuildSettings.h  CompilerSettings.h  Math.inl  String.inl
noesis/include/NsDrawing/: SVGPath.h
noesis/include/NsGui/: ArcSegment.h  BindingExpression.h  BitmapImage.h  ClonedGeometry.h  Condition.h  FrameworkElement.h  GeometryGroup.h  ItemsControl.h  Path.h  StreamGeometry.h  StreamGeometryContext.h  Uri.h  VisualBrush.h
source/: BaseModelCollection.cpp  BaseProperty.cpp  Cache.cpp  Model.cpp  PropertyList.cpp  ViewModel.cpp  ViewModelFactory.cpp
tests/: CMakeLists.txt
tests/codegen/: CMakeLists.txt  Compare.cpp  Compare.h  Factory.cpp  Factory.h  Goalkeeper.tests.cpp  League.tests.cpp  Midfielder.tests.cpp  Outfielder.tests.cpp  Player.tests.cpp  Team.tests.cpp  main.cpp  models.xml  viewmodels.xml
tests/core/: CMakeLists.txt  Model.tests.cpp  ModelCollection.tests.cpp  ViewModel.tests.cpp  ViewModelCollection.tests.cpp  main.cpp
tests/reflection/: CMakeLists.txt  Model.tests.cpp  ModelCollection.tests.cpp  Property.tests.cpp  PropertyList.tests.cpp
